Linux bugfix